style.css
:root {
    --logo-pink: #F8D1F3; /*mainly logo*/
    --red-brown-black: #271D16; /*mainly body text*/
    --grey-green: #A4ABA1; /*accent*/
    --grey-opacity: rgba(255,255,255,0.4);
    --light-green: #9DC9A6; /*button main*/
    --dark-green: #2D362B; /*buttons, accent*/
    --grey-tri-blue: #667688; /*used by tri*/
    --highlight-blue: #314D6E;
    --red-brown: #5C2B27; /*buttons text*/
    --link-bg: #A84F47;
}

@font-face {
    font-family: "DejavuSans";
    src: 
        local("DejavuSans"),
        url('./font/dejavu-sans/DejaVuSans.ttf') format("truetype"),
        url('./font/dejavu-sans/DejaVuSansCondensed.ttf') format("truetype");
}
@font-face {
    font-family: "Inkfree";
    src:
        local("Inkfree"),
        url('./font/Inkfree.ttf') format("truetype");
}
@font-face {
    font-family: "Cambria";
    src:
        local("Cambria"),
        url('./font/Cambria.ttf') format("truetype");
}

*,
*::after,
*::before {
    padding: 0;
    margin: 0;
    box-sizing: inherit;
}

html {
    height: 100%;
}

body {
    font-family: "DejavuSans", Arial, Helvetica, sans-serif;
    height: fit-content;
}
.width_constrained {
    width: 90%;
    margin: 0 auto;

    min-width: 320px;
    max-width: 2400px;
}

.sticky {
    position: sticky;
}

.fixed {
    position: fixed;
}

.center_text {
    text-align: center;
}

.triback {
    background-color: var(--grey-tri-blue);
    clip-path: polygon(100% 0, 0 0, 50% 100%);
    width: 100%;
    height: 100%;
    z-index: -2;
}

.bg_image {
    width: 100%;
    height: 100%;
    background-image: url('./art/sebastiano-piazzi-unspalsh-stairs.webp');
    background-repeat: no-repeat;
    background-position: top;
    background-size: 100% 100%;
    z-index: -4;
    filter: blur(5px);
}

.site_head {
    width: 100%;
    top: 0;
}

.logo {
    font-family: "Inkfree", Arial, Helvetica, sans-serif;
    box-shadow: inset 0 2px 1px var(--highlight-blue), inset 0 -2px 1px var(--highlight-blue);
    padding: 4px;
    text-align: center;
}
.logo a {
    color: var(--logo-pink);
}

.top_nav {
    width: 100%;
    margin-top: 0;
    z-index: -2;
}

.top_nav ol {
    list-style: none;
    display: flex;
    gap: 25%;
    justify-content: center;
    align-items: center;
}

.top_nav ol:first-child {
    padding-left: 0;
}

.top_nav a {
    text-decoration: none;
}

.navigation_button {
    color: var(--red-brown);
    background-color: var(--light-green);
    padding: 6px;
    font-family: "Cambria", Arial, Helvetica, sans-serif;
}
.navigation_button:hover {
    color: var(--light-green);
    background-color: var(--red-brown);
}
.navigation_button-current, .navigation_button-current:hover {
    color: var(--grey-tri-blue);
    background-color: var(--red-brown-black);
}

.shadow_left {
    box-shadow: -6px 1px 6px var(--dark-green);
}
.shadow_right {
    box-shadow: 6px 1px 6px var(--dark-green);
}
.shadow_down {
    box-shadow: 0 6px 6px var(--dark-green);
}

.blue_backing {
    background-color: var(--grey-tri-blue);
}

.grey_back {
    background-color: var(--grey-opacity);
    z-index: 5;
}

.content {
    padding-bottom: 3em;
}

.welcome h2 {
    margin-bottom: 2em;
}
.welcome p {
    margin-bottom: 1em;
}

#welcome, #projects, #contact {
    width: 100%;
    height: 4em;
}

.project {
    display: flex;
    flex-direction: column;
    align-items: center;
}
.project h2 {
    margin-bottom: 1em;
}
.project h3 {
    margin-top: 1em;
}
.project p {
    margin: 1em;
}
.project_links {
    list-style: none;
    display: flex;
    flex-direction: row;
    margin-bottom: 3em;
    gap: 6vw;
}

.embedded_link {
    position: relative;
    text-decoration: none;
    color: black;
    font-style: italic;
    padding: 3px;
    line-height: 1.8em;
}
.embedded_link::before {
    content: "";
    position: absolute;
    width: 2em;
    height: 2em;
    left: 50%;
    transform: translateX(-50%);
    background-color: var(--link-bg);
    z-index: -1;
    border-radius: 100%;
}
.embedded_link:hover {
    color: var(--grey-green);
    background-color: var(--red-brown);
}

.contact_link {
    text-decoration: none;
    font-size: 3em;
    color: var(--logo-pink);
    background-color: rgba(0,0,0,0);
    text-shadow: 
        -2px -2px 0 var(--highlight-blue),
        2px -2px 0 var(--highlight-blue),
        -2px 2px 0 var(--highlight-blue),
        2px 2px 0 var(--highlight-blue);
}
.contact_link:hover {
    color: var(--highlight-blue);
    text-shadow: 
        -2px -2px 0 var(--logo-pink),
        2px -2px 0 var(--logo-pink),
        -2px 2px 0 var(--logo-pink),
        2px 2px 0 var(--logo-pink);
}

.project-photo {
    width: 90%;
    height: auto;
    border: 6px solid var(--dark-green);
}

.contact h2 {
    margin-bottom: 1em;
}

.contact p {
    margin-bottom: 2em;
}

.site_footer {
    bottom: 0;
    padding-bottom: 12px;
    padding-top: 6px;
}

.site_footer a {
    text-decoration: none;
    visibility: visible;
}

#mobile_menu-button {
    background-color: rgba(0,0,0,0);
    border: none;
    width: 4em;
    height: 4em;
}
#mobile_menu-menu {
    display: none;
}
.mobile_menu {
    display: none;
    position: relative;
}
.mobile_menu ul {
    position: absolute;
    display: flex;
    flex-direction: column;
    list-style: none;
    top: 3.5em;
    left: -50%;
    gap: 1em;
    background-color: var(--dark-green);
    padding: 16px;
    margin-left: 0;
}
.mobile_menu-icon {
    width: 100%;
    height: 100%;
    clip-path: polygon(0 0, 0 100%, 100% 50%);
    background-color: var(--light-green);
}
.mobile_menu-icon:hover {
    background-color: var(--red-brown);
}

@media screen and (max-width: 740px), screen and (orientation: portrait)
 {
    .mobile_menu {
        display: flex;
    }
    .top_nav ol>li:nth-child(1) {
        display: none;
    }
    .top_nav ol>li:nth-child(3) {
        display: none;
    }
    .top_nav ol {
        justify-content: left;
    }
    .site_footer a {
        visibility: hidden;
    }
    .contact_link {
        font-size: 2em;
    }
}

